[tool.poetry]
name = "tok715-train"
version = "0.1.0"
description = "model training for tok715"
authors = ["GUO YANKE <hi@guoyk.xyz>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
transformers = "^4.35.0"
torch = "^2.1.0"
safetensors = "^0.4.0"
click = "^8.1.7"
accelerate = "^0.24.1"
datasets = "^2.14.6"
numpy = "^1.26.1"
evaluate = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
